tests/ui/fully-qualified-type/fully-qualified-type-name1.stderr
error[E0308]: mismatched types
  --> $DIR/fully-qualified-type-name1.rs:6:9
   |
LL |     let x:
   |         - expected due to the type of this binding
LL |         Option<usize>;
   |         ------------- expected due to this type
LL |     x = 5;
   |         ^ expected `Option<usize>`, found integer
   |
   = note: expected enum `Option<usize>`
              found type `{integer}`
help: try wrapping the expression in `Some`
   |
LL |     x = Some(5);
   |         +++++ +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
